--- a/css/general.css
+++ b/css/general.css
@@ -8,11 +8,10 @@
 /* Adjust cart icon size*/
 #cart span{
     font-size: 33px;
-    
 }
-#itemNum{
-    width: 20px;
-    height: 20px;
+#cartCount{
+    width: 19px;
+    height: 19px;
     text-align: center;
     position: absolute;
     bottom: 0;
