--- a/css/general.css
+++ b/css/general.css
@@ -7,16 +7,19 @@ body, html{
     position: relative;
     padding: 0;
     margin: 0 20px;
+    width: 35px;
+    height: 35px;
 }
 /* Adjust cart icon size*/
 #cart span{
-    font-size: 25px;
+    font-size: 30px;
 }
 #cartCount{
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
     text-align: center;
     position: absolute;
     bottom: 0;
-    right: 0;        
+    right: 0;  
+    font-size: small;      
 }
