--- a/css/products.css
+++ b/css/products.css
@@ -1,8 +1,7 @@
-body{
-	margin-left:50px;
-	margin-right:50px;
-}
 
+#products{
+	margin: 0 100px;
+}
 .card {
     width: 300px;
     height: 341px;
